--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 PHP/migration/vendor/*
 PHP/migration/composer.lock
 JS/Curso-jQuery/servidor/node_modules/*
+JS/pratice/src/node_modules/*
+JS/pratice/src/package-lock.json
