--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ PHP/migration/composer.lock
 JS/Curso-jQuery/servidor/node_modules/*
 JS/pratice/src/node_modules/*
 JS/pratice/src/package-lock.json
+JS/promise/node_modules/*
+JS/promise/package-lock.json
